Create automated tests for add to cart

--- a/tests-jasmine/test.html
+++ b/tests-jasmine/test.html
@@ -13,7 +13,8 @@
   <!-- optional: include a file here that configures the Jasmine env -->
   <script src="lib/jasmine-5.1.1/boot1.js"></script>
 
- <script type="module" src="moneytest.js"></script>
+<script src="utils/money-test.js" type="module"></script>
+<script src="data/cart-test.js" type="module"></script>
 
 </head>
 
