Rename test jasmine folder to test

--- a/tests/test.html
+++ b/tests/test.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Jasmine Spec Runner v5.1.1</title>
@@ -13,11 +14,14 @@
   <!-- optional: include a file here that configures the Jasmine env -->
   <script src="lib/jasmine-5.1.1/boot1.js"></script>
 
-<script src="utils/money-test.js" type="module"></script>
-<script src="data/cart-test.js" type="module"></script>
+  <script src="utils/money-test.js" type="module"></script>
+  <script src="data/cart-test.js" type="module"></script>
+  <script src="checkout/orderSummarytest.js" type="module"></script>
 
 </head>
 
 <body>
+  <div class="js-test-container"> </div>
 </body>
+
 </html>
