Do some more tests on order and payment summary .js

--- a/tests/test.html
+++ b/tests/test.html
@@ -17,6 +17,7 @@
   <script src="utils/money-test.js" type="module"></script>
   <script src="data/cart-test.js" type="module"></script>
   <script src="checkout/orderSummarytest.js" type="module"></script>
+  <script src="checkout/paymentSummaryTest.js" type="module"></script>
 
 </head>
 
