--- a/tests/test.html
+++ b/tests/test.html
@@ -18,6 +18,7 @@
   <script src="data/cart-test.js" type="module"></script>
   <script src="checkout/orderSummarytest.js" type="module"></script>
   <script src="checkout/paymentSummaryTest.js" type="module"></script>
+  <script src="data/products-test.js" type="module"></script>
 
 </head>
 
